fixed text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,15 @@
 .row{
     display: flex;
+
 }
 
 .row>*{
+    display: flex;
     background-color: lightblue;
     margin: 10px;
     height: 50px;
     align-items: center;
-    text-align: center;
-    vertical-align: auto;
+    justify-content: center;
 }
 
 .col{
